<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="OSD/head tracking">
        <PreferenceScreen
            android:title="OSD settings"
            android:summary="Customize your OSD." >
            <PreferenceCategory
                android:title="Horizon Model">
                <SwitchPreference
                    android:key="@string/HorizonModel"
                    android:title="@string/HorizonModel"
                    android:summary="Enable artificial horizon model"
                    android:defaultValue="true"
                    android:disableDependentsState="false"/>
                <PreferenceScreen
                    android:title="Settings for HorizonModel"
                    android:dependency="@string/HorizonModel">
                    <EditTextPreference
                        android:key="@string/HMScale"
                        android:title="@string/HMScale"
                        android:inputType="numberDecimal"
                        android:defaultValue="50"
                        android:summary="Scale of horizon model (in%). Default 50"/>
                    <SwitchPreference
                        android:key="@string/Roll"
                        android:title="@string/Roll"
                        android:summary="Enable roll rotation"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/Pitch"
                        android:title="@string/Pitch"
                        android:summary="Enable pitch rotation"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/InvertRoll"
                        android:title="@string/InvertRoll"
                        android:defaultValue="false" />
                    <SwitchPreference
                        android:key="@string/InvertPitch"
                        android:title="@string/InvertPitch"
                        android:defaultValue="false" />
                </PreferenceScreen>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="2D Compas Ladder showing Yaw/Direction and Home Arrow">
                <SwitchPreference
                    android:key="@string/CompassLadder"
                    android:title="@string/CompassLadder"
                    android:summary="Enable compass ladder"
                    android:defaultValue="true" />
                <PreferenceScreen
                    android:title="Settings for Compas Ladder"
                    android:dependency="@string/CompassLadder">
                    <SwitchPreference
                        android:key="@string/CLHomeArrow"
                        android:title="@string/CLHomeArrow"
                        android:summary="Draw Home Arrow."
                        android:defaultValue="true"/>
                    <SwitchPreference
                        android:key="@string/CLInvertHeading"
                        android:title="@string/CLInvertHeading"
                        android:summary="Invert heading"
                        android:defaultValue="false" />
                </PreferenceScreen>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="2D Height Ladder showing current Altitude">
                <SwitchPreference
                    android:key="@string/HeightLadder"
                    android:title="@string/HeightLadder"
                    android:summary="Enable Height Ladder"
                    android:defaultValue="true" />
                <PreferenceScreen
                    android:title="Settings for Height Ladder"
                    android:dependency="@string/HeightLadder">
                    <ListPreference
                        android:title="@string/HLSelectSourceValue"
                        android:key="@string/HLSelectSourceValue"
                        android:summary="Select which telemetry value the height ladder should use (different protocols use different sensor fusions- not every value works with every protocol)"
                        android:entries="@array/entriesHLSelectSourceValue"
                        android:entryValues="@array/valuesHLSelectSourceValue"
                        android:defaultValue="0"/>
                </PreferenceScreen>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="OSD Text Elements">
                <SwitchPreference
                    android:key="@string/TextElements"
                    android:title="@string/TextElements"
                    android:summary="Enable OSD Text Elements"
                    android:defaultValue="true" />
                <PreferenceScreen
                    android:title="Settings for Text Elements (which values to draw)"
                    android:dependency="@string/TextElements">
                    <SwitchPreference
                        android:key="@string/TE_GLFPS"
                        android:title="Open GL fps"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_DFPS"
                        android:title="Decoder fps"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_TIME"
                        android:title="Flight Time"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_RX1"
                        android:title="RX1"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_RX2"
                        android:title="RX2"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_RX3"
                        android:title="RX3"
                        android:defaultValue="true" />
                    //Bottom
                    <SwitchPreference
                        android:key="@string/TE_BATT_P"
                        android:title="Batt %"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_BATT_V"
                        android:title="Batt V"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_BATT_A"
                        android:title="Batt A"
                        android:defaultValue="true" />
                    //for 2in1
                    <SwitchPreference
                        android:key="@string/TE_BATT_AH"
                        android:title="Batt Ah"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_HOME_D"
                        android:title="Home Distance"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_VS"
                        android:title="VS (Vertical speed)"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_HS"
                        android:title="HS (Horizontal speed)"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_LAT"
                        android:title="Latitude"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_LON"
                        android:title="Longitude"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_HEIGHT_B"
                        android:title="Height B (Barometer)"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_HEIGHT_GPS"
                        android:title="Height GPS"
                        android:defaultValue="true" />
                    <SwitchPreference
                        android:key="@string/TE_N_SATS"
                        android:title="Number of Satelites"
                        android:defaultValue="true" />
                </PreferenceScreen>
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="HeadTracking settings"
            android:summary="Configure HeadTracking.">
            <PreferenceCategory
                android:title="Ground head tracking">
                <ListPreference
                    android:title="@string/GroundHeadTrackingMode"
                    android:key="@string/GroundHeadTrackingMode"
                    android:summary="Select a head tracking mode for your VR headset at the ground"
                    android:entries="@array/entriesGroundHeadTrackingMode"
                    android:entryValues="@array/valuesGroundHeadTrackingMode"
                    android:defaultValue="0"/>
                <SwitchPreference
                    android:key="@string/GroundHeadTrackingX"
                    android:title="X-axis"
                    android:defaultValue="true" />
                <SwitchPreference
                    android:key="@string/GroundHeadTrackingY"
                    android:title="Y-axis"
                    android:defaultValue="true"/>
                <SwitchPreference
                    android:key="@string/GroundHeadTrackingZ"
                    android:title="Z-axis"
                    android:defaultValue="true"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Air head tracking">
                <ListPreference
                    android:title="@string/AirHeadTrackingMode"
                    android:key="@string/AirHeadTrackingMode"
                    android:summary="Send tracking data via bidirectional telemetry for use with fpv gimbal"
                    android:entries="@array/entriesAirHeadTrackingMode"
                    android:entryValues="@array/valuesAirHeadTrackingMode"
                    android:defaultValue="0"/>
                <SwitchPreference
                    android:key="@string/AirHeadTrackingYaw"
                    android:title="YAW"
                    android:defaultValue="true"/>
                <SwitchPreference
                    android:key="@string/AirHeadTrackingRoll"
                    android:title="ROLL"
                    android:defaultValue="true"/>
                <SwitchPreference
                    android:key="@string/AirHeadTrackingPitch"
                    android:title="PITCH"
                    android:defaultValue="true"/>
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Stereo/VR" >
        <PreferenceScreen
            android:title="Stereo/VR rendering 'Hacks'"
            android:summary="Decrease latency and increase quality in VR/Stereo rendering (mono rendering is automatically optimized)" >
        <PreferenceCategory
            android:title="@string/PerformanceHacksDescription">
        </PreferenceCategory>
            <SwitchPreference
                android:key="@string/SuperSync"
                android:title="SuperSync"
                android:summary="@string/SuperSyncDescription"
                android:defaultValue="false"
                android:disableDependentsState="true"/>
            <PreferenceCategory
                android:title="Settings to reduce lag on smartphones that don't support SuperSync"
                android:dependency="@string/SuperSync">
                <SwitchPreference
                    android:key="@string/DisableVSYNC"
                    android:title="Disable VSYNC"
                    android:summary="@string/DisableVSYNCDescription"
                    android:defaultValue="false"/>
                <SwitchPreference
                    android:title="Disable 60 OpenGL fps cap"
                    android:key="@string/Disable60FPSLock"
                    android:summary="@string/Disable60FPSLockDescription"
                    android:defaultValue="false"/>
            </PreferenceCategory>

            <PreferenceCategory
                android:title="Quality">
                <ListPreference
                    android:title="@string/MultiSampleAntiAliasing"
                    android:key="@string/MultiSampleAntiAliasing"
                    android:summary="@string/MSAADescription"
                    android:entries="@array/entriesMSAA"
                    android:entryValues="@array/valuesMSAA"
                    android:defaultValue="0"/>
            </PreferenceCategory>
        </PreferenceScreen>

        <PreferenceScreen
            android:title="Stereo/VR rendering"
            android:summary="General settings for stereo rendering/VR rendering">
            <PreferenceCategory
                android:title="General">
                <EditTextPreference
                    android:key="@string/InterpupilaryDistance"
                    android:title="@string/InterpupilaryDistance"
                    android:inputType="numberDecimal"
                    android:defaultValue="0.2"
                    android:summary="@string/IPDDescription"/>
                <EditTextPreference
                    android:key="@string/SceneScale"
                    android:title="@string/SceneScale"
                    android:inputType="numberDecimal"
                    android:defaultValue="50"
                    android:summary="Size of your VR Scene in % (replaced sceneDistance). Default:50, select values between 0 and 100"/>
            </PreferenceCategory>
            <PreferenceCategory
                android:title="DistortionCorrection">
                <SwitchPreference
                    android:key="@string/DistortionCorrection"
                    android:title="@string/DistortionCorrection"
                    android:summary="enables/disables distortion correction."
                    android:defaultValue="true" />
                <ListPreference
                    android:title="@string/VRHeadsetType"
                    android:key="@string/VRHeadsetType"
                    android:summary="Select your VR Headset for distortion correction parameters. If you can't find your headset,use 'manually' and google your k1,k2 distortion factors"
                    android:entries="@array/listentries3"
                    android:entryValues="@array/listvalues3"
                    android:defaultValue="CV2"
                    android:dependency="@string/DistortionCorrection"/>
                <EditTextPreference
                    android:key="@string/K1"
                    android:inputType="numberDecimal"
                    android:title="K1 (distortionFactor 1 if you select 'Manually'' for your Headset)"
                    android:defaultValue="0.15"
                    android:dependency="@string/DistortionCorrection"/>
                <EditTextPreference
                    android:key="@string/K2"
                    android:inputType="numberDecimal"
                    android:title="K2 (distortionFactor 2 if you select 'Manually'' for your Headset)"
                    android:defaultValue="0.15"
                    android:dependency="@string/DistortionCorrection"/>
            </PreferenceCategory>
        </PreferenceScreen>

    </PreferenceCategory>




</PreferenceScreen>