<?xml version="1.0" encoding="utf-8"?>


<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="constantin.fpv_vr.Activity_Connect">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/EZWBSubLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/descriptionEZWB"
            android:text="@string/EZWBDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/Mode1"
            android:text="@string/Mode1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/Mode1InfoB"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="INFO" />
            <Button
                android:id="@+id/Mode1ConnectB"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CONNECT" />
            <TextView
                android:id="@+id/Mode1StatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Status: Not connected"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/background_light"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/Mode2"
            android:text="@string/Mode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/Mode2InfoB"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="INFO" />
            <Button
                android:id="@+id/Mode2ConnectB"
                android:onClick="onClick"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CONNECT" />
            <TextView
                android:id="@+id/Mode2StatusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Status: Not connected"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@android:color/background_light"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/EZWBTestReceiverTextView"
            android:textSize="20dp"
            android:textColor="@color/colorPrimary"
            android:text="No receiver detected.&#10;RX:0" />

    </LinearLayout>



</android.support.v4.widget.NestedScrollView>
